# parsing

./: .dockerignore  Dockerfile  docker-compose.yml  example.env  pyproject.toml
app/: api.py  main.py  tasks.py
app/utils/: config.py  logger.py  web.py
tests/: test_tasks.py
