[tool.poetry]
name = "zakupki"
version = "0.1.0"
description = ""
authors = ["DisZom <cerradr@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.8.1"
celery = {extras = ["gevent"], version = "^5.4.0"}
selectolax = "^0.3.28"
xmltodict = "^0.14.2"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
